Splash, Welcome, Home and Categories almost done :)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Lia</string>
     <string name="title_activity_nature_herbs">NatureHerbsActivity</string>
+    <string name="home_text">Home Text</string>
+    <string name="category_text">Category Text</string>
 </resources>
