--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="capitals">Capitals</string>
     <string name="math">Math</string>
     <string name="words">Words</string>
+    <string name="headerText">Header Text</string>
 </resources>
