--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,11 @@
     <string name="app_name">Kul Kunskap</string>
     <string name="start_games_text">Start Games</string>
     <string name="title_activity_nature_herbs">Herbs</string>
-    <string name="headerText">Header Text</string>
-    <string name="home_text">Home Text</string>
-    <string name="category_text">Category Text</string>
-    <string name="quiz_text">Quiz Text</string>
+    <string name="home_text">Games</string>
+    <string name="category_text">Categories</string>
+    <string name="quiz_text">Category</string>
     <string name="question_text">Question Text</string>
+    <string name="q_button_text">Continue</string>
 
     <string name="mammals">Mammals</string>
     <string name="insects">Insects</string>
