--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,215 @@
     <string name="word_to_pic">Word to picture</string>
     <string name="spelling">Spelling</string>
 
+    <string name="co_af_algeria_dz">Spelling</string>
+    <string name="co_af_angola_ao">Spelling</string>
+    <string name="co_af_benin_bj">Spelling</string>
+    <string name="co_af_botswana_bw">Spelling</string>
+    <string name="co_af_burkina_faso_bf">Spelling</string>
+    <string name="co_af_burundi_bi">Spelling</string>
+    <string name="co_af_cameroon_cm">Spelling</string>
+    <string name="co_af_cape_verde_cv">Spelling</string>
+    <string name="co_af_the_central_african_republic_cf">Spelling</string>
+    <string name="co_af_chad_td">Spelling</string>
+    <string name="co_af_the_comoros_km">Spelling</string>
+    <string name="co_af_cote_d_ivoire_ci">Spelling</string>
+    <string name="co_af_the_democratic_republic_of_the_congo_cd">Spelling</string>
+    <string name="co_af_djibouti_dj">Spelling</string>
+    <string name="co_af_egypt_eg">Spelling</string>
+    <string name="co_af_equatorial_guinea_gq">Spelling</string>
+    <string name="co_af_eritrea_er">Spelling</string>
+    <string name="co_af_ethiopia_et">Spelling</string>
+    <string name="co_af_gabon_ga">Spelling</string>
+    <string name="co_af_the_gambia_gm">Spelling</string>
+    <string name="co_af_ghana_gh">Spelling</string>
+    <string name="co_af_guinea_gn">Spelling</string>
+    <string name="co_af_guinea_bissau_gw">Spelling</string>
+    <string name="co_af_kenya_ke">Spelling</string>
+    <string name="co_af_lesotho_ls">Spelling</string>
+    <string name="co_af_liberia_lr">Spelling</string>
+    <string name="co_af_libya_ly">Spelling</string>
+    <string name="co_af_madagascar_mg">Spelling</string>
+    <string name="co_af_malawi_mw">Spelling</string>
+    <string name="co_af_mali_ml">Spelling</string>
+    <string name="co_af_mauritania_mr">Spelling</string>
+    <string name="co_af_mauritius_mu">Spelling</string>
+    <string name="co_af_morocco_ma">Spelling</string>
+    <string name="co_af_mozambique_mz">Spelling</string>
+    <string name="co_af_namibia_na">Spelling</string>
+    <string name="co_af_niger_ne">Spelling</string>
+    <string name="co_af_nigeria_ng">Spelling</string>
+    <string name="co_af_the_republic_of_the_congo_cg">Spelling</string>
+    <string name="co_af_rwanda_rw">Spelling</string>
+    <string name="co_af_sao_tome_and_principe_st">Spelling</string>
+    <string name="co_af_senegal_sn">Spelling</string>
+    <string name="co_af_the_seychelles_sc">Spelling</string>
+    <string name="co_af_sierra_leone_sl">Spelling</string>
+    <string name="co_af_somalia_so">Spelling</string>
+    <string name="co_af_south_africa_za">Spelling</string>
+    <string name="co_af_south_sudan_sdn">Spelling</string>
+    <string name="co_af_sudan_sd">Spelling</string>
+    <string name="co_af_swaziland_sz">Spelling</string>
+    <string name="co_af_tanzania_tz">Spelling</string>
+    <string name="co_af_togo_tg">Spelling</string>
+    <string name="co_af_tunisia_tn">Spelling</string>
+    <string name="co_af_uganda_ug">Spelling</string>
+    <string name="co_af_western_sahara_eh">Spelling</string>
+    <string name="co_af_zambia_zm">Spelling</string>
+    <string name="co_af_zimbabwe_zw">Spelling</string>
 
+    <string name="co_as_afghanistan_af">Spelling</string>
+    <string name="co_as_armenia_am">Spelling</string>
+    <string name="co_as_azerbaijan_az">Spelling</string>
+    <string name="co_as_bahrain_bh">Spelling</string>
+    <string name="co_as_bangladesh_bd">Spelling</string>
+    <string name="co_as_bhutan_bt">Spelling</string>
+    <string name="co_as_brunei_bn">Spelling</string>
+    <string name="co_as_cambodia_kh">Spelling</string>
+    <string name="co_as_cyprus_cy">Spelling</string>
+    <string name="co_as_east_timor_tl">Spelling</string>
+    <string name="co_as_egypt_eg">Spelling</string>
+    <string name="co_as_georgia_ge">Spelling</string>
+    <string name="co_as_india_in">Spelling</string>
+    <string name="co_as_indonesia_id">Spelling</string>
+    <string name="co_as_iran_ir">Spelling</string>
+    <string name="co_as_iraq_iq">Spelling</string>
+    <string name="co_as_israel_il">Spelling</string>
+    <string name="co_as_japan_jp">Spelling</string>
+    <string name="co_as_jordan_jo">Spelling</string>
+    <string name="co_as_kazakhstan_kz">Spelling</string>
+    <string name="co_as_kuwait_kw">Spelling</string>
+    <string name="co_as_kyrgyzstan_kg">Spelling</string>
+    <string name="co_as_laos_la">Spelling</string>
+    <string name="co_as_lebanon_lb">Spelling</string>
+    <string name="co_as_malaysia_my">Spelling</string>
+    <string name="co_as_maldives_mv">Spelling</string>
+    <string name="co_as_mongolia_mn">Spelling</string>
+    <string name="co_as_myanmar_mm">Spelling</string>
+    <string name="co_as_nepal_np">Spelling</string>
+    <string name="co_as_north_korea_kp">Spelling</string>
+    <string name="co_as_oman_om">Spelling</string>
+    <string name="co_as_pakistan_pk">Spelling</string>
+    <string name="co_as_the_peoples_republic_of_china_cn">Spelling</string>
+    <string name="co_as_the_philippines_ph">Spelling</string>
+    <string name="co_as_qatar_qa">Spelling</string>
+    <string name="co_as_the_republic_of_china_tw">Spelling</string>
+    <string name="co_as_russia_ru">Spelling</string>
+    <string name="co_as_saudi_arabia_sa">Spelling</string>
+    <string name="co_as_singapore_sg">Spelling</string>
+    <string name="co_as_south_korea_kr">Spelling</string>
+    <string name="co_as_sri_lanka_lk">Spelling</string>
+    <string name="co_as_syria_sy">Spelling</string>
+    <string name="co_as_tajikistan_tj">Spelling</string>
+    <string name="co_as_thailand_th">Spelling</string>
+    <string name="co_as_turkey_tr">Spelling</string>
+    <string name="co_as_turkmenistan_tm">Spelling</string>
+    <string name="co_as_the_united_arab_emirates_ae">Spelling</string>
+    <string name="co_as_uzbekistan_uz">Spelling</string>
+    <string name="co_as_vietnam_vn">Spelling</string>
+    <string name="co_as_yemen_ye">Spelling</string>
+
+    <string name="co_eu_albania_al">Spelling</string>
+    <string name="co_eu_andorra_ad">Spelling</string>
+    <string name="co_eu_austria_at">Spelling</string>
+    <string name="co_eu_belarus_by">Spelling</string>
+    <string name="co_eu_belgium_be">Spelling</string>
+    <string name="co_eu_bosnia_and_herzegovina_ba">Spelling</string>
+    <string name="co_eu_bulgaria_bg">Spelling</string>
+    <string name="co_eu_croatia_hr">Spelling</string>
+    <string name="co_eu_the_czech_republic_cz">Spelling</string>
+    <string name="co_eu_denmark_dk">Spelling</string>
+    <string name="co_eu_estonia_ee">Spelling</string>
+    <string name="co_eu_finland_fi">Spelling</string>
+    <string name="co_eu_france_fr">Spelling</string>
+    <string name="co_eu_germany_de">Spelling</string>
+    <string name="co_eu_greece_gr">Spelling</string>
+    <string name="co_eu_hungary_hu">Spelling</string>
+    <string name="co_eu_iceland_is">Spelling</string>
+    <string name="co_eu_ireland_ie">Spelling</string>
+    <string name="co_eu_italy_it">Spelling</string>
+    <string name="co_eu_kosovo_xk">Spelling</string>
+    <string name="co_eu_latvia_lv">Spelling</string>
+    <string name="co_eu_liechtenstein_li">Spelling</string>
+    <string name="co_eu_lithuania_lt">Spelling</string>
+    <string name="co_eu_luxembourg_lu">Spelling</string>
+    <string name="co_eu_macedonia_mk">Spelling</string>
+    <string name="co_eu_malta_mt">Spelling</string>
+    <string name="co_eu_moldova_md">Spelling</string>
+    <string name="co_eu_monaco_mc">Spelling</string>
+    <string name="co_eu_montenegro_me">Spelling</string>
+    <string name="co_eu_the_netherlands_nl">Spelling</string>
+    <string name="co_eu_norway_no">Spelling</string>
+    <string name="co_eu_poland_pl">Spelling</string>
+    <string name="co_eu_portugal_pt">Spelling</string>
+    <string name="co_eu_romania_ro">Spelling</string>
+    <string name="co_eu_russia_ru">Spelling</string>
+    <string name="co_eu_san_marino_sm">Spelling</string>
+    <string name="co_eu_serbia_rs">Spelling</string>
+    <string name="co_eu_slovakia_sk">Spelling</string>
+    <string name="co_eu_slovenia_si">Spelling</string>
+    <string name="co_eu_spain_es">Spelling</string>
+    <string name="co_eu_sweden_se">Spelling</string>
+    <string name="co_eu_switzerland_ch">Spelling</string>
+    <string name="co_eu_turkey_tr">Spelling</string>
+    <string name="co_eu_ukraine_ua">Spelling</string>
+    <string name="co_eu_the_united_kingdom_gb">Spelling</string>
+    <string name="co_eu_the_vatican_city_state_va">Spelling</string>
+
+    <string name="co_na_antigua_and_barbuda_ag">Spelling</string>
+    <string name="co_na_the_bahamas_bs">Spelling</string>
+    <string name="co_na_barbados_bb">Spelling</string>
+    <string name="co_na_belize_bz">Spelling</string>
+    <string name="co_na_canada_ca">Spelling</string>
+    <string name="co_na_costa_rica_cr">Spelling</string>
+    <string name="co_na_cuba_cu">Spelling</string>
+    <string name="co_na_dominica_dm">Spelling</string>
+    <string name="co_na_the_dominican_republic_do">Spelling</string>
+    <string name="co_na_el_salvador_sv">Spelling</string>
+    <string name="co_na_grenada_gd">Spelling</string>
+    <string name="co_na_guatemala_gt">Spelling</string>
+    <string name="co_na_haiti_ht">Spelling</string>
+    <string name="co_na_honduras_hn">Spelling</string>
+    <string name="co_na_jamaica_jm">Spelling</string>
+    <string name="co_na_mexico_mx">Spelling</string>
+    <string name="co_na_nicaragua_ni">Spelling</string>
+    <string name="co_na_panama_pa">Spelling</string>
+    <string name="co_na_saint_kitts_and_nevis_kn">Spelling</string>
+    <string name="co_na_saint_lucia_lc">Spelling</string>
+    <string name="co_na_saint_vincent_and_the_grenadines_vc">Spelling</string>
+    <string name="co_na_trinidad_and_tobago_tt">Spelling</string>
+    <string name="co_na_the_united_states_us">Spelling</string>
+
+    <string name="co_sa_argentina_ar">Spelling</string>
+    <string name="co_sa_bolivia_bo">Spelling</string>
+    <string name="co_sa_brazil_br">Spelling</string>
+    <string name="co_sa_chile_cl">Spelling</string>
+    <string name="co_sa_colombia_co">Spelling</string>
+    <string name="co_sa_ecuador_ec">Spelling</string>
+    <string name="co_sa_guyana_gy">Spelling</string>
+    <string name="co_sa_paraguay_py">Spelling</string>
+    <string name="co_sa_peru_pe">Spelling</string>
+    <string name="co_sa_suriname_sr">Spelling</string>
+    <string name="co_sa_trinidad_and_tobago_tt">Spelling</string>
+    <string name="co_sa_uruguay_uy">Spelling</string>
+    <string name="co_sa_venezuela_ve">Spelling</string>
+
+    <string name="co_oc_australia_au">Spelling</string>
+    <string name="co_oc_cook_islands_ck">Spelling</string>
+    <string name="co_oc_east_timor_tl">Spelling</string>
+    <string name="co_oc_fiji_fj">Spelling</string>
+    <string name="co_oc_indonesia_id">Spelling</string>
+    <string name="co_oc_kiribati_ki">Spelling</string>
+    <string name="co_oc_the_marshall_islands_mh">Spelling</string>
+    <string name="co_oc_micronesia_fm">Spelling</string>
+    <string name="co_oc_nauru_nr">Spelling</string>
+    <string name="co_oc_new_zealand_nz">Spelling</string>
+    <string name="co_oc_niue_nu">Spelling</string>
+    <string name="co_oc_palau_pw">Spelling</string>
+    <string name="co_oc_papua_new_guinea_pg">Spelling</string>
+    <string name="co_oc_samoa_ws">Spelling</string>
+    <string name="co_oc_the_solomon_islands_sb">Spelling</string>
+    <string name="co_oc_tonga_to">Spelling</string>
+    <string name="co_oc_tuvalu_tv">Spelling</string>
+    <string name="co_oc_vanuatu_vu">Spelling</string>
 
 </resources>
