Added a lot of live data and string resources.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,112 +38,114 @@
     <string name="word_to_pic">Word to picture</string>
     <string name="spelling">Spelling</string>
 
-    <string name="co_af_algeria_dz">Spelling</string>
-    <string name="co_af_angola_ao">Spelling</string>
-    <string name="co_af_benin_bj">Spelling</string>
-    <string name="co_af_botswana_bw">Spelling</string>
-    <string name="co_af_burkina_faso_bf">Spelling</string>
-    <string name="co_af_burundi_bi">Spelling</string>
-    <string name="co_af_cameroon_cm">Spelling</string>
-    <string name="co_af_cape_verde_cv">Spelling</string>
-    <string name="co_af_the_central_african_republic_cf">Spelling</string>
-    <string name="co_af_chad_td">Spelling</string>
-    <string name="co_af_the_comoros_km">Spelling</string>
-    <string name="co_af_cote_d_ivoire_ci">Spelling</string>
-    <string name="co_af_the_democratic_republic_of_the_congo_cd">Spelling</string>
-    <string name="co_af_djibouti_dj">Spelling</string>
-    <string name="co_af_egypt_eg">Spelling</string>
-    <string name="co_af_equatorial_guinea_gq">Spelling</string>
-    <string name="co_af_eritrea_er">Spelling</string>
-    <string name="co_af_ethiopia_et">Spelling</string>
-    <string name="co_af_gabon_ga">Spelling</string>
-    <string name="co_af_the_gambia_gm">Spelling</string>
-    <string name="co_af_ghana_gh">Spelling</string>
-    <string name="co_af_guinea_gn">Spelling</string>
-    <string name="co_af_guinea_bissau_gw">Spelling</string>
-    <string name="co_af_kenya_ke">Spelling</string>
-    <string name="co_af_lesotho_ls">Spelling</string>
-    <string name="co_af_liberia_lr">Spelling</string>
-    <string name="co_af_libya_ly">Spelling</string>
-    <string name="co_af_madagascar_mg">Spelling</string>
-    <string name="co_af_malawi_mw">Spelling</string>
-    <string name="co_af_mali_ml">Spelling</string>
-    <string name="co_af_mauritania_mr">Spelling</string>
-    <string name="co_af_mauritius_mu">Spelling</string>
-    <string name="co_af_morocco_ma">Spelling</string>
-    <string name="co_af_mozambique_mz">Spelling</string>
-    <string name="co_af_namibia_na">Spelling</string>
-    <string name="co_af_niger_ne">Spelling</string>
-    <string name="co_af_nigeria_ng">Spelling</string>
-    <string name="co_af_the_republic_of_the_congo_cg">Spelling</string>
-    <string name="co_af_rwanda_rw">Spelling</string>
-    <string name="co_af_sao_tome_and_principe_st">Spelling</string>
-    <string name="co_af_senegal_sn">Spelling</string>
-    <string name="co_af_the_seychelles_sc">Spelling</string>
-    <string name="co_af_sierra_leone_sl">Spelling</string>
-    <string name="co_af_somalia_so">Spelling</string>
-    <string name="co_af_south_africa_za">Spelling</string>
-    <string name="co_af_south_sudan_sdn">Spelling</string>
-    <string name="co_af_sudan_sd">Spelling</string>
-    <string name="co_af_swaziland_sz">Spelling</string>
-    <string name="co_af_tanzania_tz">Spelling</string>
-    <string name="co_af_togo_tg">Spelling</string>
-    <string name="co_af_tunisia_tn">Spelling</string>
-    <string name="co_af_uganda_ug">Spelling</string>
-    <string name="co_af_western_sahara_eh">Spelling</string>
-    <string name="co_af_zambia_zm">Spelling</string>
-    <string name="co_af_zimbabwe_zw">Spelling</string>
+    <string name="flag_question">Choose the flag belonging to \n</string>
 
-    <string name="co_as_afghanistan_af">Spelling</string>
-    <string name="co_as_armenia_am">Spelling</string>
-    <string name="co_as_azerbaijan_az">Spelling</string>
-    <string name="co_as_bahrain_bh">Spelling</string>
-    <string name="co_as_bangladesh_bd">Spelling</string>
-    <string name="co_as_bhutan_bt">Spelling</string>
-    <string name="co_as_brunei_bn">Spelling</string>
-    <string name="co_as_cambodia_kh">Spelling</string>
-    <string name="co_as_cyprus_cy">Spelling</string>
-    <string name="co_as_east_timor_tl">Spelling</string>
-    <string name="co_as_egypt_eg">Spelling</string>
-    <string name="co_as_georgia_ge">Spelling</string>
-    <string name="co_as_india_in">Spelling</string>
-    <string name="co_as_indonesia_id">Spelling</string>
-    <string name="co_as_iran_ir">Spelling</string>
-    <string name="co_as_iraq_iq">Spelling</string>
-    <string name="co_as_israel_il">Spelling</string>
-    <string name="co_as_japan_jp">Spelling</string>
-    <string name="co_as_jordan_jo">Spelling</string>
-    <string name="co_as_kazakhstan_kz">Spelling</string>
-    <string name="co_as_kuwait_kw">Spelling</string>
-    <string name="co_as_kyrgyzstan_kg">Spelling</string>
-    <string name="co_as_laos_la">Spelling</string>
-    <string name="co_as_lebanon_lb">Spelling</string>
-    <string name="co_as_malaysia_my">Spelling</string>
-    <string name="co_as_maldives_mv">Spelling</string>
-    <string name="co_as_mongolia_mn">Spelling</string>
-    <string name="co_as_myanmar_mm">Spelling</string>
-    <string name="co_as_nepal_np">Spelling</string>
-    <string name="co_as_north_korea_kp">Spelling</string>
-    <string name="co_as_oman_om">Spelling</string>
-    <string name="co_as_pakistan_pk">Spelling</string>
-    <string name="co_as_the_peoples_republic_of_china_cn">Spelling</string>
-    <string name="co_as_the_philippines_ph">Spelling</string>
-    <string name="co_as_qatar_qa">Spelling</string>
-    <string name="co_as_the_republic_of_china_tw">Spelling</string>
-    <string name="co_as_russia_ru">Spelling</string>
-    <string name="co_as_saudi_arabia_sa">Spelling</string>
-    <string name="co_as_singapore_sg">Spelling</string>
-    <string name="co_as_south_korea_kr">Spelling</string>
-    <string name="co_as_sri_lanka_lk">Spelling</string>
-    <string name="co_as_syria_sy">Spelling</string>
-    <string name="co_as_tajikistan_tj">Spelling</string>
-    <string name="co_as_thailand_th">Spelling</string>
-    <string name="co_as_turkey_tr">Spelling</string>
-    <string name="co_as_turkmenistan_tm">Spelling</string>
-    <string name="co_as_the_united_arab_emirates_ae">Spelling</string>
-    <string name="co_as_uzbekistan_uz">Spelling</string>
-    <string name="co_as_vietnam_vn">Spelling</string>
-    <string name="co_as_yemen_ye">Spelling</string>
+    <string name="co_af_algeria_dz">Algeria</string>
+    <string name="co_af_angola_ao">Angola</string>
+    <string name="co_af_benin_bj">Benin</string>
+    <string name="co_af_botswana_bw">Botswana</string>
+    <string name="co_af_burkina_faso_bf">Burkina Faso</string>
+    <string name="co_af_burundi_bi">Burundi</string>
+    <string name="co_af_cameroon_cm">Cameroon</string>
+    <string name="co_af_cape_verde_cv">Cape Verde</string>
+    <string name="co_af_the_central_african_republic_cf">The Central African Republic</string>
+    <string name="co_af_chad_td">Chad</string>
+    <string name="co_af_the_comoros_km">The Comoros</string>
+    <string name="co_af_ivory_coast_ci">Ivory Coast</string>
+    <string name="co_af_the_democratic_republic_of_the_congo_cd">The Democratic Republic of Congo</string>
+    <string name="co_af_djibouti_dj">Djibouti</string>
+    <string name="co_af_egypt_eg">Egypt</string>
+    <string name="co_af_equatorial_guinea_gq">Equatorial Guinea</string>
+    <string name="co_af_eritrea_er">Eritrea</string>
+    <string name="co_af_ethiopia_et">Ethiopia</string>
+    <string name="co_af_gabon_ga">Gabon</string>
+    <string name="co_af_the_gambia_gm">Gambia</string>
+    <string name="co_af_ghana_gh">Ghana</string>
+    <string name="co_af_guinea_gn">Guinea</string>
+    <string name="co_af_guinea_bissau_gw">Guinea-Bissau</string>
+    <string name="co_af_kenya_ke">Kenya</string>
+    <string name="co_af_lesotho_ls">Lesotho</string>
+    <string name="co_af_liberia_lr">Liberia</string>
+    <string name="co_af_libya_ly">Libya</string>
+    <string name="co_af_madagascar_mg">Madagascar</string>
+    <string name="co_af_malawi_mw">Malawi</string>
+    <string name="co_af_mali_ml">Mali</string>
+    <string name="co_af_mauritania_mr">Mauritania</string>
+    <string name="co_af_mauritius_mu">Mauritius</string>
+    <string name="co_af_morocco_ma">Morocco</string>
+    <string name="co_af_mozambique_mz">Mozambique</string>
+    <string name="co_af_namibia_na">Namibia</string>
+    <string name="co_af_niger_ne">Niger</string>
+    <string name="co_af_nigeria_ng">Nigeria</string>
+    <string name="co_af_the_republic_of_the_congo_cg">The Republic of the Congo</string>
+    <string name="co_af_rwanda_rw">Rwanda</string>
+    <string name="co_af_sao_tome_and_principe_st">São Tomé and Príncipe</string>
+    <string name="co_af_senegal_sn">Senegal</string>
+    <string name="co_af_the_seychelles_sc">The Seychelles</string>
+    <string name="co_af_sierra_leone_sl">Sierra Leone</string>
+    <string name="co_af_somalia_so">Somalia</string>
+    <string name="co_af_south_africa_za">South Africa</string>
+    <string name="co_af_south_sudan_sdn">South Sudan</string>
+    <string name="co_af_sudan_sd">Sudan</string>
+    <string name="co_af_swaziland_sz">Swaziland</string>
+    <string name="co_af_tanzania_tz">Tanzania</string>
+    <string name="co_af_togo_tg">Togo</string>
+    <string name="co_af_tunisia_tn">Tunisia</string>
+    <string name="co_af_uganda_ug">Uganda</string>
+    <string name="co_af_western_sahara_eh">Western Sahara</string>
+    <string name="co_af_zambia_zm">Zambia</string>
+    <string name="co_af_zimbabwe_zw">Zimbabwe</string>
+
+    <string name="co_as_afghanistan_af">Afghanistan</string>
+    <string name="co_as_armenia_am">Armenia</string>
+    <string name="co_as_azerbaijan_az">Azerbaijan</string>
+    <string name="co_as_bahrain_bh">Bahrain</string>
+    <string name="co_as_bangladesh_bd">Bangladesh</string>
+    <string name="co_as_bhutan_bt">Bhutan</string>
+    <string name="co_as_brunei_bn">Brunei</string>
+    <string name="co_as_cambodia_kh">Cambodia</string>
+    <string name="co_as_cyprus_cy">Cyprus</string>
+    <string name="co_as_east_timor_tl">East Timor</string>
+    <string name="co_as_egypt_eg">Egypt</string>
+    <string name="co_as_georgia_ge">Georgia</string>
+    <string name="co_as_india_in">India</string>
+    <string name="co_as_indonesia_id">Indonesia</string>
+    <string name="co_as_iran_ir">Iran</string>
+    <string name="co_as_iraq_iq">Iraq</string>
+    <string name="co_as_israel_il">Israel</string>
+    <string name="co_as_japan_jp">Japan</string>
+    <string name="co_as_jordan_jo">Jordan</string>
+    <string name="co_as_kazakhstan_kz">Kazakhstan</string>
+    <string name="co_as_kuwait_kw">Kuwait</string>
+    <string name="co_as_kyrgyzstan_kg">Kyrgyzstan</string>
+    <string name="co_as_laos_la">Laos</string>
+    <string name="co_as_lebanon_lb">Lebanon</string>
+    <string name="co_as_malaysia_my">Malaysia</string>
+    <string name="co_as_maldives_mv">Maldives</string>
+    <string name="co_as_mongolia_mn">Mongolia</string>
+    <string name="co_as_myanmar_mm">Myanmar</string>
+    <string name="co_as_nepal_np">Nepal</string>
+    <string name="co_as_north_korea_kp">North Korea</string>
+    <string name="co_as_oman_om">Oman</string>
+    <string name="co_as_pakistan_pk">Pakistan</string>
+    <string name="co_as_the_peoples_republic_of_china_cn">The peoples republic of China</string>
+    <string name="co_as_the_philippines_ph">The Philippines</string>
+    <string name="co_as_qatar_qa">Qatar</string>
+    <string name="co_as_the_republic_of_china_tw">The republic of China</string>
+    <string name="co_as_russia_ru">Russia</string>
+    <string name="co_as_saudi_arabia_sa">Saudi Arabia</string>
+    <string name="co_as_singapore_sg">Singapore</string>
+    <string name="co_as_south_korea_kr">South Korea</string>
+    <string name="co_as_sri_lanka_lk">Sri Lanka</string>
+    <string name="co_as_syria_sy">Syria</string>
+    <string name="co_as_tajikistan_tj">Tajikistan</string>
+    <string name="co_as_thailand_th">Thailand</string>
+    <string name="co_as_turkey_tr">Turkey</string>
+    <string name="co_as_turkmenistan_tm">Turkmenistan</string>
+    <string name="co_as_the_united_arab_emirates_ae">United Arab Emirates</string>
+    <string name="co_as_uzbekistan_uz">Uzbekistan</string>
+    <string name="co_as_vietnam_vn">Vietnam</string>
+    <string name="co_as_yemen_ye">Yemen</string>
 
     <string name="co_eu_albania_al">Spelling</string>
     <string name="co_eu_andorra_ad">Spelling</string>
@@ -248,5 +250,53 @@
     <string name="co_oc_tonga_to">Spelling</string>
     <string name="co_oc_tuvalu_tv">Spelling</string>
     <string name="co_oc_vanuatu_vu">Spelling</string>
+
+    <string name="an_bi_pigeon">Spelling</string>
+    <string name="an_bi_sparrow">Spelling</string>
+    <string name="an_bi_crow">Spelling</string>
+    <string name="an_bi_seagull">Spelling</string>
+    <string name="an_bi_crane">Spelling</string>
+    <string name="an_bi_eagle">Spelling</string>
+    <string name="an_bi_condor">Spelling</string>
+    <string name="an_bi_hummingbird">Spelling</string>
+
+    <string name="an_ma_african_wild_dog">Spelling</string>
+    <string name="an_ma_armadillo">Spelling</string>
+    <string name="an_ma_baboon">Spelling</string>
+    <string name="an_ma_bear">Spelling</string>
+    <string name="an_ma_bengal_tiger">Spelling</string>
+    <string name="an_ma_bighorn_sheep">Spelling</string>
+    <string name="an_ma_bobcat">Spelling</string>
+    <string name="an_ma_buffalo">Spelling</string>
+    <string name="an_ma_camel">Spelling</string>
+    <string name="an_ma_cheetah">Spelling</string>
+    <string name="an_ma_chimpanzee">Spelling</string>
+    <string name="an_ma_dolphin">Spelling</string>
+    <string name="an_ma_donkey">Spelling</string>
+    <string name="an_ma_elephant">Spelling</string>
+    <string name="an_ma_ferret">Spelling</string>
+    <string name="an_ma_fox">Spelling</string>
+    <string name="an_ma_giraffe">Spelling</string>
+    <string name="an_ma_guinea_pig">Spelling</string>
+    <string name="an_ma_hippopotamus">Spelling</string>
+    <string name="an_ma_koala">Spelling</string>
+    <string name="an_ma_lemur">Spelling</string>
+    <string name="an_ma_lion">Spelling</string>
+    <string name="an_ma_moose">Spelling</string>
+    <string name="an_ma_mouse">Spelling</string>
+    <string name="an_ma_orca">Spelling</string>
+    <string name="an_ma_panda">Spelling</string>
+    <string name="an_ma_rabbit">Spelling</string>
+    <string name="an_ma_raccoon">Spelling</string>
+    <string name="an_ma_red_panda">Spelling</string>
+    <string name="an_ma_riesen">Spelling</string>
+    <string name="an_ma_seal">Spelling</string>
+    <string name="an_ma_sheep">Spelling</string>
+    <string name="an_ma_squirrel">Spelling</string>
+    <string name="an_ma_surikat">Spelling</string>
+    <string name="an_ma_wallaby">Spelling</string>
+    <string name="an_ma_walrus">Spelling</string>
+    <string name="an_ma_wolf">Spelling</string>
+    <string name="an_ma_zebra">Spelling</string>
 
 </resources>
