more string resources... :)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,156 +147,156 @@
     <string name="co_as_vietnam_vn">Vietnam</string>
     <string name="co_as_yemen_ye">Yemen</string>
 
-    <string name="co_eu_albania_al">Spelling</string>
-    <string name="co_eu_andorra_ad">Spelling</string>
-    <string name="co_eu_austria_at">Spelling</string>
-    <string name="co_eu_belarus_by">Spelling</string>
-    <string name="co_eu_belgium_be">Spelling</string>
-    <string name="co_eu_bosnia_and_herzegovina_ba">Spelling</string>
-    <string name="co_eu_bulgaria_bg">Spelling</string>
-    <string name="co_eu_croatia_hr">Spelling</string>
-    <string name="co_eu_the_czech_republic_cz">Spelling</string>
-    <string name="co_eu_denmark_dk">Spelling</string>
-    <string name="co_eu_estonia_ee">Spelling</string>
-    <string name="co_eu_finland_fi">Spelling</string>
-    <string name="co_eu_france_fr">Spelling</string>
-    <string name="co_eu_germany_de">Spelling</string>
-    <string name="co_eu_greece_gr">Spelling</string>
-    <string name="co_eu_hungary_hu">Spelling</string>
-    <string name="co_eu_iceland_is">Spelling</string>
-    <string name="co_eu_ireland_ie">Spelling</string>
-    <string name="co_eu_italy_it">Spelling</string>
-    <string name="co_eu_kosovo_xk">Spelling</string>
-    <string name="co_eu_latvia_lv">Spelling</string>
-    <string name="co_eu_liechtenstein_li">Spelling</string>
-    <string name="co_eu_lithuania_lt">Spelling</string>
-    <string name="co_eu_luxembourg_lu">Spelling</string>
-    <string name="co_eu_macedonia_mk">Spelling</string>
-    <string name="co_eu_malta_mt">Spelling</string>
-    <string name="co_eu_moldova_md">Spelling</string>
-    <string name="co_eu_monaco_mc">Spelling</string>
-    <string name="co_eu_montenegro_me">Spelling</string>
-    <string name="co_eu_the_netherlands_nl">Spelling</string>
-    <string name="co_eu_norway_no">Spelling</string>
-    <string name="co_eu_poland_pl">Spelling</string>
-    <string name="co_eu_portugal_pt">Spelling</string>
-    <string name="co_eu_romania_ro">Spelling</string>
-    <string name="co_eu_russia_ru">Spelling</string>
-    <string name="co_eu_san_marino_sm">Spelling</string>
-    <string name="co_eu_serbia_rs">Spelling</string>
-    <string name="co_eu_slovakia_sk">Spelling</string>
-    <string name="co_eu_slovenia_si">Spelling</string>
-    <string name="co_eu_spain_es">Spelling</string>
-    <string name="co_eu_sweden_se">Spelling</string>
-    <string name="co_eu_switzerland_ch">Spelling</string>
-    <string name="co_eu_turkey_tr">Spelling</string>
-    <string name="co_eu_ukraine_ua">Spelling</string>
-    <string name="co_eu_the_united_kingdom_gb">Spelling</string>
-    <string name="co_eu_the_vatican_city_state_va">Spelling</string>
+    <string name="co_eu_albania_al">Albania</string>
+    <string name="co_eu_andorra_ad">Andorra</string>
+    <string name="co_eu_austria_at">Austria</string>
+    <string name="co_eu_belarus_by">Belarus</string>
+    <string name="co_eu_belgium_be">Belgium</string>
+    <string name="co_eu_bosnia_and_herzegovina_ba">Bosna and Herzegovina</string>
+    <string name="co_eu_bulgaria_bg">Bulgaria</string>
+    <string name="co_eu_croatia_hr">Croatia</string>
+    <string name="co_eu_the_czech_republic_cz">The Czech republic</string>
+    <string name="co_eu_denmark_dk">Denmark</string>
+    <string name="co_eu_estonia_ee">Estonia</string>
+    <string name="co_eu_finland_fi">Finland</string>
+    <string name="co_eu_france_fr">France</string>
+    <string name="co_eu_germany_de">Germany</string>
+    <string name="co_eu_greece_gr">Greece</string>
+    <string name="co_eu_hungary_hu">Hungary</string>
+    <string name="co_eu_iceland_is">Iceland</string>
+    <string name="co_eu_ireland_ie">Ireland</string>
+    <string name="co_eu_italy_it">Italy</string>
+    <string name="co_eu_kosovo_xk">Kosovo</string>
+    <string name="co_eu_latvia_lv">Latvia</string>
+    <string name="co_eu_liechtenstein_li">Liechtenstein</string>
+    <string name="co_eu_lithuania_lt">Lithuania</string>
+    <string name="co_eu_luxembourg_lu">Luxembourg</string>
+    <string name="co_eu_macedonia_mk">Macedonia</string>
+    <string name="co_eu_malta_mt">Malta</string>
+    <string name="co_eu_moldova_md">Moldavia</string>
+    <string name="co_eu_monaco_mc">Monaco</string>
+    <string name="co_eu_montenegro_me">Montenegro</string>
+    <string name="co_eu_the_netherlands_nl">The Netherlands</string>
+    <string name="co_eu_norway_no">Norway</string>
+    <string name="co_eu_poland_pl">Poland</string>
+    <string name="co_eu_portugal_pt">Portugal</string>
+    <string name="co_eu_romania_ro">Romania</string>
+    <string name="co_eu_russia_ru">Russia</string>
+    <string name="co_eu_san_marino_sm">San Marino</string>
+    <string name="co_eu_serbia_rs">Serbia</string>
+    <string name="co_eu_slovakia_sk">Slovakia</string>
+    <string name="co_eu_slovenia_si">Slovenia</string>
+    <string name="co_eu_spain_es">Spain</string>
+    <string name="co_eu_sweden_se">Sweden</string>
+    <string name="co_eu_switzerland_ch">Switzerland</string>
+    <string name="co_eu_turkey_tr">Turkey</string>
+    <string name="co_eu_ukraine_ua">Ukraine</string>
+    <string name="co_eu_the_united_kingdom_gb">The United Kingdom</string>
+    <string name="co_eu_the_vatican_city_state_va">The Vatican City State</string>
 
-    <string name="co_na_antigua_and_barbuda_ag">Spelling</string>
-    <string name="co_na_the_bahamas_bs">Spelling</string>
-    <string name="co_na_barbados_bb">Spelling</string>
-    <string name="co_na_belize_bz">Spelling</string>
-    <string name="co_na_canada_ca">Spelling</string>
-    <string name="co_na_costa_rica_cr">Spelling</string>
-    <string name="co_na_cuba_cu">Spelling</string>
-    <string name="co_na_dominica_dm">Spelling</string>
-    <string name="co_na_the_dominican_republic_do">Spelling</string>
-    <string name="co_na_el_salvador_sv">Spelling</string>
-    <string name="co_na_grenada_gd">Spelling</string>
-    <string name="co_na_guatemala_gt">Spelling</string>
-    <string name="co_na_haiti_ht">Spelling</string>
-    <string name="co_na_honduras_hn">Spelling</string>
-    <string name="co_na_jamaica_jm">Spelling</string>
-    <string name="co_na_mexico_mx">Spelling</string>
-    <string name="co_na_nicaragua_ni">Spelling</string>
-    <string name="co_na_panama_pa">Spelling</string>
-    <string name="co_na_saint_kitts_and_nevis_kn">Spelling</string>
-    <string name="co_na_saint_lucia_lc">Spelling</string>
-    <string name="co_na_saint_vincent_and_the_grenadines_vc">Spelling</string>
-    <string name="co_na_trinidad_and_tobago_tt">Spelling</string>
-    <string name="co_na_the_united_states_us">Spelling</string>
+    <string name="co_na_antigua_and_barbuda_ag">Antigua and Barbuda</string>
+    <string name="co_na_the_bahamas_bs">Bahamas</string>
+    <string name="co_na_barbados_bb">Barbados</string>
+    <string name="co_na_belize_bz">Belize</string>
+    <string name="co_na_canada_ca">Canada</string>
+    <string name="co_na_costa_rica_cr">Costa Rica</string>
+    <string name="co_na_cuba_cu">Cuba</string>
+    <string name="co_na_dominica_dm">Dominica</string>
+    <string name="co_na_the_dominican_republic_do">The Dominican Republic</string>
+    <string name="co_na_el_salvador_sv">El Salvador</string>
+    <string name="co_na_grenada_gd">Grenada</string>
+    <string name="co_na_guatemala_gt">Guatemala</string>
+    <string name="co_na_haiti_ht">Haiti</string>
+    <string name="co_na_honduras_hn">Honduras</string>
+    <string name="co_na_jamaica_jm">Jamaica</string>
+    <string name="co_na_mexico_mx">Mexico</string>
+    <string name="co_na_nicaragua_ni">Nicaragua</string>
+    <string name="co_na_panama_pa">Panama</string>
+    <string name="co_na_saint_kitts_and_nevis_kn">Saint Kitts and Nevis</string>
+    <string name="co_na_saint_lucia_lc">Saint Lucia</string>
+    <string name="co_na_saint_vincent_and_the_grenadines_vc">Saint Vincent and the Grenadines</string>
+    <string name="co_na_trinidad_and_tobago_tt">Trinidad and Tobago</string>
+    <string name="co_na_the_united_states_us">The United States</string>
 
-    <string name="co_sa_argentina_ar">Spelling</string>
-    <string name="co_sa_bolivia_bo">Spelling</string>
-    <string name="co_sa_brazil_br">Spelling</string>
-    <string name="co_sa_chile_cl">Spelling</string>
-    <string name="co_sa_colombia_co">Spelling</string>
-    <string name="co_sa_ecuador_ec">Spelling</string>
-    <string name="co_sa_guyana_gy">Spelling</string>
-    <string name="co_sa_paraguay_py">Spelling</string>
-    <string name="co_sa_peru_pe">Spelling</string>
-    <string name="co_sa_suriname_sr">Spelling</string>
-    <string name="co_sa_trinidad_and_tobago_tt">Spelling</string>
-    <string name="co_sa_uruguay_uy">Spelling</string>
-    <string name="co_sa_venezuela_ve">Spelling</string>
+    <string name="co_sa_argentina_ar">Argentina</string>
+    <string name="co_sa_bolivia_bo">Bolivia</string>
+    <string name="co_sa_brazil_br">Brazil</string>
+    <string name="co_sa_chile_cl">Chile</string>
+    <string name="co_sa_colombia_co">Colombia</string>
+    <string name="co_sa_ecuador_ec">Ecuador</string>
+    <string name="co_sa_guyana_gy">Guyana</string>
+    <string name="co_sa_paraguay_py">Paraguay</string>
+    <string name="co_sa_peru_pe">Peru</string>
+    <string name="co_sa_suriname_sr">Surinam</string>
+    <string name="co_sa_trinidad_and_tobago_tt">Trinidad and Tobago</string>
+    <string name="co_sa_uruguay_uy">Uruguay</string>
+    <string name="co_sa_venezuela_ve">Venezuela</string>
 
-    <string name="co_oc_australia_au">Spelling</string>
-    <string name="co_oc_cook_islands_ck">Spelling</string>
-    <string name="co_oc_east_timor_tl">Spelling</string>
-    <string name="co_oc_fiji_fj">Spelling</string>
-    <string name="co_oc_indonesia_id">Spelling</string>
-    <string name="co_oc_kiribati_ki">Spelling</string>
-    <string name="co_oc_the_marshall_islands_mh">Spelling</string>
-    <string name="co_oc_micronesia_fm">Spelling</string>
-    <string name="co_oc_nauru_nr">Spelling</string>
-    <string name="co_oc_new_zealand_nz">Spelling</string>
-    <string name="co_oc_niue_nu">Spelling</string>
-    <string name="co_oc_palau_pw">Spelling</string>
-    <string name="co_oc_papua_new_guinea_pg">Spelling</string>
-    <string name="co_oc_samoa_ws">Spelling</string>
-    <string name="co_oc_the_solomon_islands_sb">Spelling</string>
-    <string name="co_oc_tonga_to">Spelling</string>
-    <string name="co_oc_tuvalu_tv">Spelling</string>
-    <string name="co_oc_vanuatu_vu">Spelling</string>
+    <string name="co_oc_australia_au">Australia</string>
+    <string name="co_oc_cook_islands_ck">Cooc Islands</string>
+    <string name="co_oc_east_timor_tl">East Timor</string>
+    <string name="co_oc_fiji_fj">Fiji</string>
+    <string name="co_oc_indonesia_id">Indonesia</string>
+    <string name="co_oc_kiribati_ki">Kiribati</string>
+    <string name="co_oc_the_marshall_islands_mh">The Marshall Islands</string>
+    <string name="co_oc_micronesia_fm">Micronesia</string>
+    <string name="co_oc_nauru_nr">Nauru</string>
+    <string name="co_oc_new_zealand_nz">New Zeeland</string>
+    <string name="co_oc_niue_nu">Niue</string>
+    <string name="co_oc_palau_pw">Palau</string>
+    <string name="co_oc_papua_new_guinea_pg">Papua new Guinea</string>
+    <string name="co_oc_samoa_ws">Samoa</string>
+    <string name="co_oc_the_solomon_islands_sb">The Solomon Islands</string>
+    <string name="co_oc_tonga_to">Tonga</string>
+    <string name="co_oc_tuvalu_tv">Tuvalu</string>
+    <string name="co_oc_vanuatu_vu">Vanuatu</string>
 
-    <string name="an_bi_pigeon">Spelling</string>
-    <string name="an_bi_sparrow">Spelling</string>
-    <string name="an_bi_crow">Spelling</string>
-    <string name="an_bi_seagull">Spelling</string>
-    <string name="an_bi_crane">Spelling</string>
-    <string name="an_bi_eagle">Spelling</string>
-    <string name="an_bi_condor">Spelling</string>
-    <string name="an_bi_hummingbird">Spelling</string>
+    <string name="an_bi_pigeon">Pigeon</string>
+    <string name="an_bi_sparrow">Sparrow</string>
+    <string name="an_bi_crow">Crow</string>
+    <string name="an_bi_seagull">Seagull</string>
+    <string name="an_bi_crane">Crane</string>
+    <string name="an_bi_eagle">Eagle</string>
+    <string name="an_bi_condor">Condor</string>
+    <string name="an_bi_hummingbird">Hummingbird</string>
 
-    <string name="an_ma_african_wild_dog">Spelling</string>
-    <string name="an_ma_armadillo">Spelling</string>
-    <string name="an_ma_baboon">Spelling</string>
-    <string name="an_ma_bear">Spelling</string>
-    <string name="an_ma_bengal_tiger">Spelling</string>
-    <string name="an_ma_bighorn_sheep">Spelling</string>
-    <string name="an_ma_bobcat">Spelling</string>
-    <string name="an_ma_buffalo">Spelling</string>
-    <string name="an_ma_camel">Spelling</string>
-    <string name="an_ma_cheetah">Spelling</string>
-    <string name="an_ma_chimpanzee">Spelling</string>
-    <string name="an_ma_dolphin">Spelling</string>
-    <string name="an_ma_donkey">Spelling</string>
-    <string name="an_ma_elephant">Spelling</string>
-    <string name="an_ma_ferret">Spelling</string>
-    <string name="an_ma_fox">Spelling</string>
-    <string name="an_ma_giraffe">Spelling</string>
-    <string name="an_ma_guinea_pig">Spelling</string>
-    <string name="an_ma_hippopotamus">Spelling</string>
-    <string name="an_ma_koala">Spelling</string>
-    <string name="an_ma_lemur">Spelling</string>
-    <string name="an_ma_lion">Spelling</string>
-    <string name="an_ma_moose">Spelling</string>
-    <string name="an_ma_mouse">Spelling</string>
-    <string name="an_ma_orca">Spelling</string>
-    <string name="an_ma_panda">Spelling</string>
-    <string name="an_ma_rabbit">Spelling</string>
-    <string name="an_ma_raccoon">Spelling</string>
-    <string name="an_ma_red_panda">Spelling</string>
-    <string name="an_ma_riesen">Spelling</string>
-    <string name="an_ma_seal">Spelling</string>
-    <string name="an_ma_sheep">Spelling</string>
-    <string name="an_ma_squirrel">Spelling</string>
-    <string name="an_ma_surikat">Spelling</string>
-    <string name="an_ma_wallaby">Spelling</string>
-    <string name="an_ma_walrus">Spelling</string>
-    <string name="an_ma_wolf">Spelling</string>
-    <string name="an_ma_zebra">Spelling</string>
+    <string name="an_ma_african_wild_dog">African wild dog</string>
+    <string name="an_ma_armadillo">Armadillo</string>
+    <string name="an_ma_baboon">Baboon</string>
+    <string name="an_ma_bear">Bear</string>
+    <string name="an_ma_bengal_tiger">Tiger</string>
+    <string name="an_ma_bighorn_sheep">Bighorn Sheep</string>
+    <string name="an_ma_bobcat">Bobcat</string>
+    <string name="an_ma_buffalo">Buffalo</string>
+    <string name="an_ma_camel">Camel</string>
+    <string name="an_ma_cheetah">Cheetah</string>
+    <string name="an_ma_chimpanzee">Chimpanzee</string>
+    <string name="an_ma_dolphin">Dolphin</string>
+    <string name="an_ma_donkey">Donkey</string>
+    <string name="an_ma_elephant">Elephant</string>
+    <string name="an_ma_ferret">Ferret</string>
+    <string name="an_ma_fox">Fox</string>
+    <string name="an_ma_giraffe">Giraffe</string>
+    <string name="an_ma_guinea_pig">Guinea Pig</string>
+    <string name="an_ma_hippopotamus">Hippopotamus</string>
+    <string name="an_ma_koala">Koala</string>
+    <string name="an_ma_lemur">Lemur</string>
+    <string name="an_ma_lion">Lion</string>
+    <string name="an_ma_moose">Moose</string>
+    <string name="an_ma_mouse">Mouse</string>
+    <string name="an_ma_orca">Orca</string>
+    <string name="an_ma_panda">Panda</string>
+    <string name="an_ma_rabbit">Rabbit</string>
+    <string name="an_ma_raccoon">Raccoon</string>
+    <string name="an_ma_red_panda">Panda</string>
+    <string name="an_ma_riesen">Riesen</string>
+    <string name="an_ma_seal">Seal</string>
+    <string name="an_ma_sheep">Sheep</string>
+    <string name="an_ma_squirrel">Squirrel</string>
+    <string name="an_ma_surikat">Surikat</string>
+    <string name="an_ma_wallaby">Wallaby</string>
+    <string name="an_ma_walrus">Walrus</string>
+    <string name="an_ma_wolf">Wolf</string>
+    <string name="an_ma_zebra">Zebra</string>
 
 </resources>
